// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > renders basic case correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class=""></ol>
</nav>"
`;

exports[`Breadcrumb > renders with default slot correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">
        <!--v-if-->default slot
      </a><span class="i-heroicons-chevron-right-20-solid rtl:i-heroicons-chevron-left-20-solid flex-shrink-0 w-5 h-5" role="presentation"></span></li>
    <li class=""><a class="" aria-current="page" href="/about">
        <!--v-if-->default slot
      </a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with divider correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">
        <!--v-if--><span class="">Home</span>
      </a><span role="presentation">|</span></li>
    <li class=""><a class="" aria-current="page" href="/about">
        <!--v-if--><span class="">About</span>
      </a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with divider slot correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">
        <!--v-if--><span class="">Home</span>
      </a>divider slot</li>
    <li class=""><a class="" aria-current="page" href="/about">
        <!--v-if--><span class="">About</span>
      </a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with icon correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/"><span class="i-heroicons-academic-cap flex-shrink-0 w-5 h-5"></span><span class="">Home</span></a><span class="i-heroicons-chevron-right-20-solid rtl:i-heroicons-chevron-left-20-solid flex-shrink-0 w-5 h-5" role="presentation"></span></li>
    <li class=""><a class="" aria-current="page" href="/about"><span class="i-heroicons-code-bracket-square flex-shrink-0 w-5 h-5"></span><span class="">About</span></a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with icon slot correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">icon slot<span class="">Home</span></a><span class="i-heroicons-chevron-right-20-solid rtl:i-heroicons-chevron-left-20-solid flex-shrink-0 w-5 h-5" role="presentation"></span></li>
    <li class=""><a class="" aria-current="page" href="/about">icon slot<span class="">About</span></a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with links correctly 1`] = `
"<nav aria-label="Breadcrumb">
  <ol class="">
    <li class=""><a class="" href="/">
        <!--v-if--><span class="">Home</span>
      </a><span class="i-heroicons-chevron-right-20-solid rtl:i-heroicons-chevron-left-20-solid flex-shrink-0 w-5 h-5" role="presentation"></span></li>
    <li class=""><a class="" aria-current="page" href="/about">
        <!--v-if--><span class="">About</span>
      </a>
      <!--v-if-->
    </li>
  </ol>
</nav>"
`;
